--- a/Obsidian Vault/Экзамен по проге/На 3/Видимость.md
+++ b/Obsidian Vault/Экзамен по проге/На 3/Видимость.md
@@ -1,9 +1,17 @@
 #на3 #на4
 Видимость позволяет ограничить доступ к полям и методам класса извне. Модификаторы:
    * private - доступ только изнутри экземпляра класса
-   * protected - доступ из экземпляра этого класса или класса-наследника
+   * protected - доступ из экземпляра этого класса, доступ из любого места внутри пакета или класса-наследника
    * package-private (задается отсутствием модификатора) - доступ из любого места внутри пакета
    * public - неограниченный доступ из любого места
 
 Top-level классы могут быть только public или package-private. К [[nested classes vs inner classes|вложенным классам]] таких ограничений нет.
 К [[Локальные классы, Анонимные классы#Локальные классы|локальным классам]] модификаторы видимости не применимы.
+
+| |Доступ из...|   |   |   |
+|---|---|---|---|---|
+|Модификаторы|Любого класса|Класса-наследника|Своего пакета|Своего класса|
+|`public`|**Есть**|**Есть**|**Есть**|**Есть**|
+|`protected`|**Нет**|**Есть**|**Есть**|**Есть**|
+|без модификатора (`default`, `package-private`)|**Нет**|**Нет**|**Есть**|**Есть**|
+|`private`|**Нет**|**Нет**|**Нет**|**Есть**|
