--- a/Obsidian Vault/Экзамен по проге/На 3/Видимость.md
+++ b/Obsidian Vault/Экзамен по проге/На 3/Видимость.md
@@ -1,7 +1,7 @@
 #на3 #на4
 Видимость позволяет ограничить доступ к полям и методам класса извне. Модификаторы:
    * private - доступ только изнутри экземпляра класса
-   * protected - доступ из экземпляра этого класса, доступ из любого места внутри пакета или класса-наследника
+   * protected - доступ из экземпляра этого класса, любого места внутри пакета или класса-наследника
    * package-private (задается отсутствием модификатора) - доступ из любого места внутри пакета
    * public - неограниченный доступ из любого места
 
