--- a/Obsidian Vault/Экзамен по проге/На 3/Видимость.md
+++ b/Obsidian Vault/Экзамен по проге/На 3/Видимость.md
@@ -2,7 +2,7 @@
 Видимость позволяет ограничить доступ к полям и методам класса извне. Модификаторы:
    * private - доступ только изнутри экземпляра класса
    * protected - доступ из экземпляра этого класса, любого места внутри пакета или класса-наследника
-   * package-private (задается отсутствием модификатора) - доступ из любого места внутри пакета
+   * package-private (задается отсутствием модификатора) - доступ из любого места внутри пакета и экземпляра класса
    * public - неограниченный доступ из любого места
 
 Top-level классы могут быть только public или package-private. К [[nested classes vs inner classes|вложенным классам]] таких ограничений нет.
